# learning-cmake

./: .gitignore  README.md  regret.txt
manipulating-cache-variables/src/: CMakeLists.txt
minimal-example/src/: CMakeLists.txt  main.c
minimal-library-example/src/: CMakeLists.txt  library.h
some-platform-specific-keywords/src/: CMakeLists.txt  main.c
variable-basics/src/: CMakeLists.txt
